[package]
name = "secret-store"
version = "0.1.0"
edition = "2021"
description = "CLI secret manager for developers"
license = "MIT"

[[bin]]
name = "secret"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
colored = "2"
chrono = "0.4"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
rpassword = "7"
